fixed layout issues

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -5,7 +5,7 @@
  * Style variables
  */
 $base-font-family:     'Source Code Pro', monospace !default;
-$base-font-size:       12.5px !default;
+$base-font-size:       14px !default;
 $mobile-font-size:     12px !default;
 $base-line-height:     1.5 !default;
 $container-width:      90% !default;
@@ -14,7 +14,19 @@ $container-max-width:  1200px !default;
 /**
  * Global
  */
-body { background-color: var(--background-color);  margin: 0 auto;  padding: 0;  font-family: $base-font-family;  font-size: $base-font-size;  color: var(--text-color);  text-align: left;  line-height: $base-line-height !important; }
+body { 
+    background-color: var(--background-color);
+    margin: 0 auto;  
+    padding: 0;  
+    font-family: $base-font-family;  
+    font-size: $base-font-size;  
+    color: var(--text-color);  
+    text-align: left;  
+    line-height: $base-line-height !important; 
+    $moz: "-moz-element(#matrix)";
+    background: #{$moz};
+}
+
 h1, h2, h3, h4, h5, h6 { font-size: $base-font-size;  margin: 0px;  margin-top: 22px;  font-weight: bold;  color: var(--text-color); }
 p, ul, ol { margin: 0px;  color: var(--text-color); }
 a { text-decoration: underline;  color: var(--link-color); }
@@ -24,12 +36,23 @@ a:hover { color: var(--background-color); background-color: var(--base-color); }
 /**
  * Layout
  */
-.container { width: $container-width; max-width: $container-max-width; margin-right: auto; margin-left: auto; }
+.container { 
+    width: $container-width; 
+    max-width: $container-max-width; 
+    min-height: 900px;
+    margin-right: auto; 
+    margin-left: auto; 
+    padding: 10px 10px;
+    background-color: var(--background-color);
+}
 p { word-wrap: break-word;  word-break: break-word;  white-space: pre-wrap; }
-footer { color: var(--text-color);  border-top: var(--border);  margin: 20px auto 15px;  padding-top: 10px;  text-align: right; }
-header { margin-top: 25px;  margin-bottom: 10px; }
-header p { text-align: left;  margin: 0; }
 footer { 
+    color: var(--text-color);
+    background-color: var(--background-color);
+    border-top: var(--border);  
+    margin: 20px auto 0px;
+    padding: 10px 0px;
+    text-align: right; 
     clear: both;
     display: block;
     left: 5%;
@@ -38,6 +61,9 @@ footer {
     position: fixed;
     bottom: 0;
 }
+header { 
+    margin-top: 25px;  margin-bottom: 10px; }
+header p { text-align: left;  margin: 0; }
 
 /**
  * Highlight/Markup
